--- a/NetProject/style.css
+++ b/NetProject/style.css
@@ -10,11 +10,11 @@ body{
 header{
   width: 100%;
   /* height: 100vh; */
-  height: 250px;
+  height: 300px;
   /* mdn이나 w3school */
   /* 균일한 검은색 반투명 레이어 */
   background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), 
-  url(images/header-bg.jpg) center no-repeat;
+  url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTa7y4u8dRXvKlcsr-RT76kZjrkEG4EuoVb_g&s) center no-repeat;
   background-size: cover;
   padding: 10px 8%;
   position: relative;
@@ -58,8 +58,8 @@ nav{
 }
 .add-email button{
   border: 0;
-  background-color: #db0001;
-  color: #fff;
+  background-color: #C9B59C;
+  color: black;
   font-size: 16px;
   padding: 15px 30px;
   cursor: pointer;
@@ -106,7 +106,7 @@ section h3{
 }
 .banner-content{
   border-radius: 6px;
-  background: linear-gradient(to right, #651c3d 0%, #280a2b 60%);
+  background: linear-gradient(to right, #D9CFC7 0%, #C9B59C 60%);
   padding: 40px;
   margin-bottom: 40px;
 }
